<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shop1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.shop.ShopFirstFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingBtn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        app:backgroundTint="#F7606B"
        app:fabSize="normal"
        app:tint="#FFFFFF"
        app:srcCompat="@drawable/img_plus" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/setting_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/shop_order1"
                android:textSize="13sp"
                android:textColor="#3C3C3C"
                android:fontFamily="@font/nanum_square_regular"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/shop_order_div"
                android:textColor="#3C3C3C"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/shop_order2"
                android:textSize="13sp"
                android:textColor="#3C3C3C"
                android:fontFamily="@font/nanum_square_regular"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/shop_order_div"
                android:textColor="#3C3C3C"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/shop_order3"
                android:textColor="#3C3C3C"
                android:textSize="13sp"
                android:fontFamily="@font/nanum_square_regular"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:text="@string/shop_first_filter"
                android:textSize="13sp"
                android:textColor="#3C3C3C"
                android:fontFamily="@font/nanum_square_regular"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:background="#DBDBDB" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/shop_custom_radius_purple"
                android:fontFamily="@font/nanum_square_bold"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/shop_first_tag1"
                android:textColor="#101010"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/shop_custom_radius_purple"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/shop_first_tag2"
                android:textColor="#101010"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/shop_custom_radius_purple"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:text="@string/shop_first_tag3"
                android:textColor="#101010"
                android:fontFamily="@font/nanum_square_bold"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shop_first_recyclerview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:layout_gravity="center"
            />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</FrameLayout>