<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Shop.ShopWritingActivity1_2"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center"
                android:background="@drawable/shop_round_arrow_back_black_18dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="17dp"
                android:layout_toRightOf="@id/btnBack"
                android:layout_weight="1"

                android:gravity="center_horizontal|center_vertical"
                android:text="@string/shop_writing1_2_title"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="60dp"
                android:layout_height="32dp"
                android:background="@drawable/shop_custom_radius_lightgray"
                android:text="@string/shop_writing_btn"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EEEEEE">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EEEEEE">

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/shop_custom_left_top_radius_white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical">

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/shop_custom_left_radius_lightgray" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:ems="10"
                        android:hint="@string/shop_writing_et_title"
                        android:inputType="textPersonName"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/shop_writing_tv_price"
                        android:textColor="#898989"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/editTextTextPersonName2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="10"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/shop_writing_tv_won" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/shop_writing_tv_place"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/shop_writing_tv_place2"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <EditText
                        android:id="@+id/editTextTextPersonName3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="30dp"
                        android:text="@string/shop_writing1_2_tv_explain"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextTextPersonName4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:text="@string/shop_writing1_2_tv_area"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <ImageButton
                            android:id="@+id/imageButton"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:background="#FFFFFF"
                            app:srcCompat="@drawable/shop_round_add_black_18dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:orientation="horizontal"></LinearLayout>

                </LinearLayout>

            </FrameLayout>
        </FrameLayout>
    </ScrollView>



</LinearLayout>